[gd_scene load_steps=13 format=2]

[ext_resource path="res://Components/SpawnPlatform/Platform.gd" type="Script" id=1]
[ext_resource path="res://Assets/SpawnPlatform/scene.gltf" type="PackedScene" id=2]
[ext_resource path="res://Components/SpawnPlatform/smoke_10.png" type="Texture" id=3]
[ext_resource path="res://Components/SpawnPlatform/PlatformAudio.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Take 001"
length = 3.33333
tracks/0/type = "transform"
tracks/0/path = NodePath("RootNode (gltf orientation matrix)/RootNode (model correction matrix)/StargateFBX/Node/RootNode/Stargate/Portal")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 9.53674e-07, 5.77308, -0.725411, 0.707107, 8.42937e-08, 8.42937e-08, 0.707107, 1, 1, 1, 0.0666667, 1, 9.53674e-07, 5.77308, -0.725411, 0.707102, 0.00263195, -0.00263179, 0.707102, 1, 1, 1, 0.133333, 1, 9.53674e-07, 5.77308, -0.725411, 0.707031, 0.0103837, -0.0103836, 0.70703, 1, 1, 1, 0.2, 1, 9.53674e-07, 5.77308, -0.725411, 0.706732, 0.0230389, -0.0230387, 0.706731, 1, 1, 1, 0.266667, 1, 9.53674e-07, 5.77308, -0.725411, 0.705953, 0.040373, -0.0403728, 0.705953, 1, 1, 1, 0.4, 1, 9.53674e-07, 5.77308, -0.725411, 0.701598, 0.0880932, -0.0880931, 0.701598, 1, 1, 1, 0.6, 1, 9.53674e-07, 5.77308, -0.725411, 0.681715, 0.187789, -0.187789, 0.681715, 1, 1, 1, 0.8, 1, 9.53674e-07, 5.77308, -0.725411, 0.634822, 0.311449, -0.311449, 0.634822, 1, 1, 1, 0.933333, 1, 9.53674e-07, 5.77308, -0.725411, 0.583171, 0.39989, -0.39989, 0.583171, 1, 1, 1, 1.06667, 1, 9.53674e-07, 5.77308, -0.725411, 0.512874, 0.486785, -0.486785, 0.512874, 1, 1, 1, 1.13333, 1, 9.53674e-07, 5.77308, -0.725411, -0.470575, -0.527787, 0.527787, -0.470575, 1, 1, 1, 1.26667, 1, 9.53674e-07, 5.77308, -0.725411, -0.372337, -0.601137, 0.601137, -0.372337, 1, 1, 1, 1.4, 1, 9.53674e-07, 5.77308, -0.725411, -0.258151, -0.658299, 0.658299, -0.258151, 1, 1, 1, 1.53333, 1, 9.53674e-07, 5.77308, -0.725411, -0.132199, -0.694639, 0.694639, -0.132199, 1, 1, 1, 1.66667, 1, 9.53674e-07, 5.77308, -0.725411, 6.79964e-07, -0.707107, 0.707107, 5.11376e-07, 1, 1, 1, 1.8, 1, 9.53674e-07, 5.77308, -0.725411, 0.132201, -0.694639, 0.694639, 0.1322, 1, 1, 1, 1.93333, 1, 9.53674e-07, 5.77308, -0.725411, 0.258153, -0.658299, 0.658299, 0.258153, 1, 1, 1, 2.06667, 1, 9.53674e-07, 5.77308, -0.725411, 0.372338, -0.601136, 0.601136, 0.372338, 1, 1, 1, 2.2, 1, 9.53674e-07, 5.77308, -0.725411, 0.470576, -0.527786, 0.527787, 0.470576, 1, 1, 1, 2.33333, 1, 9.53674e-07, 5.77308, -0.725411, 0.550412, -0.443899, 0.443899, 0.550412, 1, 1, 1, 2.46667, 1, 9.53674e-07, 5.77308, -0.725411, 0.611244, -0.355501, 0.355501, 0.611244, 1, 1, 1, 2.6, 1, 9.53674e-07, 5.77308, -0.725411, 0.654185, -0.268408, 0.268408, 0.654184, 1, 1, 1, 2.8, 1, 9.53674e-07, 5.77308, -0.725411, 0.690735, -0.151279, 0.151279, 0.690735, 1, 1, 1, 3, 1, 9.53674e-07, 5.77308, -0.725411, 0.704371, -0.0621462, 0.0621464, 0.70437, 1, 1, 1, 3.06667, 1, 9.53674e-07, 5.77308, -0.725411, 0.705953, -0.0403729, 0.040373, 0.705953, 1, 1, 1, 3.13333, 1, 9.53674e-07, 5.77308, -0.725411, 0.706732, -0.0230388, 0.023039, 0.706731, 1, 1, 1, 3.2, 1, 9.53674e-07, 5.77308, -0.725411, 0.707031, -0.0103833, 0.0103834, 0.70703, 1, 1, 1, 3.26667, 1, 9.53674e-07, 5.77308, -0.725411, 0.707102, -0.00263108, 0.00263125, 0.707102, 1, 1, 1, 3.33333, 1, 9.53674e-07, 5.77308, -0.725411, 0.707107, 8.42937e-08, 8.42937e-08, 0.707107, 1, 1, 1 )
tracks/1/type = "transform"
tracks/1/path = NodePath("RootNode (gltf orientation matrix)/RootNode (model correction matrix)/StargateFBX/Node/RootNode/Stargate/Ring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = PoolRealArray( 0, 1, 9.53674e-07, 5.77308, -0.725411, 0.707107, 1.68587e-07, 0, 0.707107, 1, 1, 1, 0.0666667, 1, 9.53674e-07, 5.77308, -0.725411, 0.707087, -0.00526311, 0.00526327, 0.707087, 1, 1, 1, 0.133333, 1, 9.53674e-07, 5.77308, -0.725411, 0.706802, -0.0207649, 0.020765, 0.706802, 1, 1, 1, 0.2, 1, 9.53674e-07, 5.77308, -0.725411, 0.705605, -0.0460534, 0.0460536, 0.705605, 1, 1, 1, 0.266667, 1, 9.53674e-07, 5.77308, -0.725411, 0.702496, -0.0806145, 0.0806146, 0.702496, 1, 1, 1, 0.4, 1, 9.53674e-07, 5.77308, -0.725411, 0.685157, -0.174814, 0.174814, 0.685157, 1, 1, 1, 0.533333, 1, 9.53674e-07, 5.77308, -0.725411, 0.642377, -0.295553, 0.295553, 0.642377, 1, 1, 1, 0.6, 1, 9.53674e-07, 5.77308, -0.725411, 0.607364, -0.36209, 0.36209, 0.607364, 1, 1, 1, 0.666667, 1, 9.53674e-07, 5.77308, -0.725411, 0.561361, -0.429969, 0.429969, 0.561361, 1, 1, 1, 0.733333, 1, 9.53674e-07, 5.77308, -0.725411, 0.503339, -0.496639, 0.496639, 0.503339, 1, 1, 1, 0.8, 1, 9.53674e-07, 5.77308, -0.725411, 0.432748, -0.559222, 0.559222, 0.432748, 1, 1, 1, 0.866667, 1, 9.53674e-07, 5.77308, -0.725411, 0.349647, -0.614611, 0.614611, 0.349647, 1, 1, 1, 0.933333, 1, 9.53674e-07, 5.77308, -0.725411, 0.254808, -0.659601, 0.659601, 0.254808, 1, 1, 1, 1, 1, 9.53674e-07, 5.77308, -0.725411, 0.149774, -0.691063, 0.691063, 0.149774, 1, 1, 1, 1.06667, 1, 9.53674e-07, 5.77308, -0.725411, 0.0368828, -0.706144, 0.706144, 0.0368826, 1, 1, 1, 1.13333, 1, 9.53674e-07, 5.77308, -0.725411, 0.0807771, 0.702478, -0.702478, 0.0807773, 1, 1, 1, 1.2, 1, 9.53674e-07, 5.77308, -0.725411, 0.199472, 0.678389, -0.678388, 0.199472, 1, 1, 1, 1.26667, 1, 9.53674e-07, 5.77308, -0.725411, 0.314988, 0.633074, -0.633074, 0.314989, 1, 1, 1, 1.33333, 1, 9.53674e-07, 5.77308, -0.725411, 0.422857, 0.566738, -0.566738, 0.422857, 1, 1, 1, 1.4, 1, 9.53674e-07, 5.77308, -0.725411, 0.518614, 0.480665, -0.480665, 0.518614, 1, 1, 1, 1.46667, 1, 9.53674e-07, 5.77308, -0.725411, 0.598088, 0.377215, -0.377215, 0.598088, 1, 1, 1, 1.53333, 1, 9.53674e-07, 5.77308, -0.725411, 0.657675, 0.259737, -0.259737, 0.657675, 1, 1, 1, 1.6, 1, 9.53674e-07, 5.77308, -0.725411, 0.694599, 0.132408, -0.132408, 0.694599, 1, 1, 1, 1.66667, 1, 9.53674e-07, 5.77308, -0.725411, 0.707107, -1.10704e-06, 1.27563e-06, 0.707107, 1, 1, 1, 1.73333, 1, 9.53674e-07, 5.77308, -0.725411, 0.694599, -0.13241, 0.13241, 0.694599, 1, 1, 1, 1.8, 1, 9.53674e-07, 5.77308, -0.725411, 0.657674, -0.259739, 0.259739, 0.657674, 1, 1, 1, 1.86667, 1, 9.53674e-07, 5.77308, -0.725411, 0.598087, -0.377217, 0.377217, 0.598087, 1, 1, 1, 1.93333, 1, 9.53674e-07, 5.77308, -0.725411, 0.518613, -0.480667, 0.480667, 0.518613, 1, 1, 1, 2, 1, 9.53674e-07, 5.77308, -0.725411, 0.422855, -0.566739, 0.566739, 0.422855, 1, 1, 1, 2.06667, 1, 9.53674e-07, 5.77308, -0.725411, 0.314987, -0.633074, 0.633075, 0.314987, 1, 1, 1, 2.13333, 1, 9.53674e-07, 5.77308, -0.725411, 0.19947, -0.678389, 0.678389, 0.19947, 1, 1, 1, 2.2, 1, 9.53674e-07, 5.77308, -0.725411, 0.080776, -0.702478, 0.702478, 0.0807759, 1, 1, 1, 2.26667, 1, 9.53674e-07, 5.77308, -0.725411, 0.0368837, 0.706144, -0.706144, 0.0368839, 1, 1, 1, 2.33333, 1, 9.53674e-07, 5.77308, -0.725411, 0.149775, 0.691063, -0.691063, 0.149775, 1, 1, 1, 2.4, 1, 9.53674e-07, 5.77308, -0.725411, 0.254808, 0.659601, -0.6596, 0.254808, 1, 1, 1, 2.46667, 1, 9.53674e-07, 5.77308, -0.725411, 0.349647, 0.614611, -0.614611, 0.349648, 1, 1, 1, 2.53333, 1, 9.53674e-07, 5.77308, -0.725411, 0.432748, 0.559222, -0.559222, 0.432748, 1, 1, 1, 2.6, 1, 9.53674e-07, 5.77308, -0.725411, 0.503339, 0.496639, -0.496639, 0.503339, 1, 1, 1, 2.66667, 1, 9.53674e-07, 5.77308, -0.725411, 0.561361, 0.429969, -0.429969, 0.561361, 1, 1, 1, 2.73333, 1, 9.53674e-07, 5.77308, -0.725411, 0.607364, 0.36209, -0.36209, 0.607364, 1, 1, 1, 2.8, 1, 9.53674e-07, 5.77308, -0.725411, 0.642377, 0.295554, -0.295553, 0.642377, 1, 1, 1, 2.93333, 1, 9.53674e-07, 5.77308, -0.725411, 0.685157, 0.174814, -0.174814, 0.685157, 1, 1, 1, 3.06667, 1, 9.53674e-07, 5.77308, -0.725411, 0.702496, 0.080615, -0.0806148, 0.702496, 1, 1, 1, 3.13333, 1, 9.53674e-07, 5.77308, -0.725411, 0.705605, 0.0460538, -0.0460536, 0.705605, 1, 1, 1, 3.2, 1, 9.53674e-07, 5.77308, -0.725411, 0.706802, 0.0207653, -0.0207651, 0.706802, 1, 1, 1, 3.26667, 1, 9.53674e-07, 5.77308, -0.725411, 0.707087, 0.0052635, -0.00526333, 0.707087, 1, 1, 1, 3.33333, 1, 9.53674e-07, 5.77308, -0.725411, 0.707107, 8.42937e-08, 8.42937e-08, 0.707107, 1, 1, 1 )

[sub_resource type="CylinderShape" id=2]
margin = 0.001
radius = 40.77
height = 9.55363

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
albedo_color = Color( 0.121569, 0.952941, 0.027451, 1 )
albedo_texture = ExtResource( 3 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 1.0
spread = 0.0
gravity = Vector3( 2, 20, 2 )
initial_velocity_random = 1.0
angular_velocity = 1.16631e-38
scale = 2.0
color = Color( 0.2, 0.976471, 0.0392157, 1 )

[sub_resource type="CapsuleMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
flags_unshaded = true
params_blend_mode = 1
albedo_color = Color( 0.972549, 0.027451, 0.027451, 1 )
albedo_texture = ExtResource( 3 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 1.0
spread = 0.0
gravity = Vector3( 2, 20, 2 )
initial_velocity_random = 1.0
angular_velocity = 6.0
scale = 2.0
color = Color( 0.972549, 0.027451, 0.027451, 1 )

[sub_resource type="CapsuleMesh" id=8]

[node name="Platform" type="StaticBody"]
transform = Transform( 0.05, 1.36788e-10, 1.86265e-10, -1.36788e-10, 0.05, 5.58795e-10, -1.86265e-10, -5.58795e-10, 0.05, 0, 0, 0 )
script = ExtResource( 1 )

[node name="Scene Root" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, -2.18557e-08, 0.5, 0, -0.5, -2.18557e-08, 0, -25, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Take 001" = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1.28244, -1.44511e-08, -1.70655e-10, 1.5507e-09, 0.715614, 4.5645e-09, -1.70632e-10, -6.84677e-09, 1.32825, -0.173497, -21.69, -0.533714 )
shape = SubResource( 2 )

[node name="smoke-green" type="Particles" parent="."]
transform = Transform( -7.21219, 0.727796, -0.416259, 0.633394, 8.35053, -3.55271e-15, -0.630984, 0.0636738, 4.75787, 6.79742, -32.337, -2.76622 )
material_override = SubResource( 3 )
amount = 20
visibility_aabb = AABB( -17.8449, -4, -4.16357, 0.557076, 8, 8 )
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 5 )

[node name="smoke-green2" type="Particles" parent="."]
transform = Transform( 7.15424, -0.480362, 0.797034, 0.49971, 8.36659, 0.0927426, 1.17567, -0.186128, -4.70816, -0.0447118, -27.739, -9.36632 )
visible = false
material_override = SubResource( 3 )
amount = 20
visibility_aabb = AABB( -17.8449, -4, -4.16357, 0.557076, 8, 8 )
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 5 )

[node name="smoke-red" type="Particles" parent="."]
transform = Transform( -6.94683, 0.694592, -0.348623, 0.610089, 7.96956, 0, -0.607768, 0.0607688, 3.98478, 6, -32, -2 )
visible = false
material_override = SubResource( 6 )
amount = 20
visibility_aabb = AABB( -4, 8.55029, -5.17942, 8, 8, 2.80806 )
process_material = SubResource( 7 )
draw_pass_1 = SubResource( 8 )

[node name="smoke-red2" type="Particles" parent="."]
transform = Transform( 6.89794, -0.535492, 0.625688, 0.488255, 7.97988, -0.0502642, 1.08631, -0.186347, -3.95044, 0, -27, -9 )
visible = false
material_override = SubResource( 6 )
amount = 20
visibility_aabb = AABB( -4, 8.55029, -4, 8, 8, 8 )
process_material = SubResource( 7 )
draw_pass_1 = SubResource( 8 )

[node name="PlatformAudio" type="AudioStreamPlayer" parent="."]
script = ExtResource( 4 )
